[package]
name = "rust_lmdb"
version = "0.1.0"
authors = ["Austin Li"]
edition = "2018"

[dependencies]
lmdb-rkv = "0.14.0"
time = "0.1"
tokio = { version = "1.14.0", features = [ "rt", "macros",  "process", "net" ] }
tikv-client = { git = "https://github.com/tikv/client-rust", rev = "8f54e6114227718e256027df2577bbacdf425f86" }

[build-dependencies]
prost-build = "0.9.0"

[patch.crates-io]
raft-proto = { git = "https://github.com/tikv/raft-rs", rev="95c532612ee6a83591fce9a8b51d6afe87b58835"}
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", rev="82b49fea7e696fd647b5aca0a6c6ec944eab3189" }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", rev="82b49fea7e696fd647b5aca0a6c6ec944eab3189" }